# hmm

./: .gitignore  .readthedocs.yaml  Makefile  Notes.md  README.rst  develop.nix  noxfile.py  pyproject.toml  setup.cfg  setup.py  test_coding_standards.py
docs/api/source/: conf.py  hmm.rst  hmm.tests.rst  index.rst
docs/manual/: examples.py
docs/manual/source/: Basic_HMM.rst  conf.py  index.rst
hmm/: base.py  extensions.py  observe_float.py  scalar.py  simple.py
hmm/tests/: test_base.py  test_extensions.py  test_observe_float.py  test_scalar.py  test_simple.py
lib_nix/: emacs_config.nix  emacs_select.nix
src/hmm/tests/: test_base.py  test_observe_float.py
