[metadata]
name = hmm
version = 0.0.6
author = Andrew Fraser
author_email = andy@fraserphysics.com
description = Python code for hidden markov models
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/fraserphysics/hmm
project_urls =
    Bug Tracker = https://github.com/fraserphysics/hmm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

python_requires = >=3.7

install_requires =
    numpy>=1.17.0
    scipy

[options.extras_require]
test=pytest;scipy
doc=sphinx;sphinx-autobuild

[options.packages.find]
where=src